--- a/kubernetes/istio.yaml
+++ b/kubernetes/istio.yaml
@@ -19,9 +19,14 @@ metadata:
   name: my-destination-rule-frontend
 spec:
   host: app-frontend.default.svc.cluster.local
-  trafficPolicy:
-    loadBalancer:
-      simple: ROUND_ROBIN
+  subsets:
+  - name: v1
+    labels:
+      version: v1
+  - name: v2
+    labels:
+      version: v2
+
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
@@ -115,3 +120,12 @@ spec:
         host: app-frontend.default.svc.cluster.local
         port:
           number: 3000
+        subset: v1
+      weight: 90
+    - destination:
+        host: app-frontend.default.svc.cluster.local
+        port:
+          number: 3000
+        subset: v2
+      weight: 10
+
