--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -114,8 +114,6 @@
     - name: Apply Kubernetes YAML files
       shell: |
         kubectl label namespace default istio-injection=enabled --overwrite
-        kubectl create namespace rate-limit
-        kubectl label namespace rate-limit istio-injection=enabled
         
         kubectl apply -f /vagrant/kubernetes/app-frontend.yaml
         kubectl apply -f /vagrant/kubernetes/app-service.yaml
@@ -130,8 +128,10 @@
         kubectl apply -f /vagrant/kubernetes/istio-service.yaml -n istio-system
         kubectl apply -f /vagrant/kubernetes/ingress.yaml
         
-        kubectl apply -f /vagrant/kubernetes/http-bin.yaml 
-        kubectl apply -f /vagrant/kubernetes/rate-limit.yaml -n rate-limit
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/config-map.yaml -n istio-system
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/envoy-filter.yaml -n istio-system
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/envoy-filter-config.yaml -n istio-system
+
       environment:
         KUBECONFIG: /etc/rancher/k3s/k3s.yaml
 
