--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -128,9 +128,16 @@
         kubectl apply -f /vagrant/kubernetes/istio-service.yaml -n istio-system
         kubectl apply -f /vagrant/kubernetes/ingress.yaml
         
-#        kubectl apply -f /vagrant/kubernetes/rate-limit/config-map.yaml -n istio-system
-#        kubectl apply -f /vagrant/kubernetes/rate-limit/envoy-filter.yaml -n istio-system
-#        kubectl apply -f /vagrant/kubernetes/rate-limit/envoy-filter-config.yaml -n istio-system
+        kubectl create namespace rl
+        kubectl label namespace rl istio-injection=enabled
+        
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/httpbin-statefulset.yaml
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/sleep-statefulset.yaml
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/httpbin-service.yaml
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/sleep-service.yaml
+#
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/httpbin-ratelimit-simple.yaml -n rl
+#        kubectl apply -f /vagrant/kubernetes/rate-limit/rate-limit.yaml -n rl
 
       environment:
         KUBECONFIG: /etc/rancher/k3s/k3s.yaml
