--- a/kubernetes/rate-limit/rate-limit.yaml
+++ b/kubernetes/rate-limit/rate-limit.yaml
@@ -1,79 +1,12 @@
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: httpbin
-  namespace: rl
-spec:
-  serviceName: "httpbin"
-  replicas: 1
-  selector:
-    matchLabels:
-      app: httpbin
-  template:
-    metadata:
-      labels:
-        app: httpbin
-    spec:
-      containers:
-      - name: httpbin
-        image: kennethreitz/httpbin
-        ports:
-        - containerPort: 80
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: sleep
-  namespace: rl
-spec:
-  serviceName: "sleep"
-  replicas: 1
-  selector:
-    matchLabels:
-      app: sleep
-  template:
-    metadata:
-      labels:
-        app: sleep
-    spec:
-      containers:
-      - name: sleep
-        image: curlimages/curl
-        command: ["/bin/sleep", "infinity"]
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: httpbin
-  namespace: rl
-spec:
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: httpbin
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: sleep
-  namespace: rl
-spec:
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: sleep
----
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
-  name: httpbin-ratelimit
-  namespace: rl
+  name: echoserver-ratelimit
+  namespace: rate-limit
 spec:
   workloadSelector:
     labels:
-      app: httpbin
+      app: echoserver
   configPatches:
     - applyTo: HTTP_FILTER
       match:
@@ -112,3 +45,70 @@ spec:
                     value: TOO_MANY_REQUESTS
               status:
                 code: 429
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: echoserver
+  namespace: rate-limit
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: echoserver
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: echoserver
+  namespace: rate-limit
+spec:
+  serviceName: "echoserver"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: echoserver
+  template:
+    metadata:
+      labels:
+        app: echoserver
+    spec:
+      containers:
+      - name: echoserver
+        image: ealen/echo-server:latest
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sleep
+  namespace: rate-limit
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: sleep
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: sleep
+  namespace: rate-limit
+spec:
+  serviceName: "sleep"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: sleep
+  template:
+    metadata:
+      labels:
+        app: sleep
+    spec:
+      containers:
+      - name: sleep
+        image: curlimages/curl
+        command: ["/bin/sleep", "infinity"]
