--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -130,7 +130,7 @@
         
         kubectl create namespace rl
         kubectl label namespace rl istio-injection=enabled
-        kubectl apply -f /vagrant/kubernetes/rate-limit/rate-limit.yaml -n rl
+        kubectl apply -f /vagrant/kubernetes/rate-limit/rate-limit.yaml -n rate-limit
 
 
       environment:
